# CLI_StockBacktrace

./: .gitignore  BUG_REPORT.md  CMakeLists.txt  CODE_QUALITY_GUIDELINES.md  LICENSE  PROGRESS.md  README.md  UIdesign.md  backend_architecture.md  code_review.md  frontend_architecture.md  stock_backtrack.db  test_thread_pool.cpp
.trae/documents/: ai_friendly_optimization_plan.md
.trae/rules/: aitutor.md  cpp_rules.md  workflow.md
backend/api/: APIServer.cpp  APIServer.h
backend/cli/: CLI.cpp  CLI.h
backend/models/: Database.cpp  Database.h
backend/services/: BacktestService.h
backend/utils/: Utils.h
core/include/: backtest_engine.h  data_handler.h  execution_handler.h  strategy.h
core/src/: backtest_engine.cpp  data_handler.cpp  main.cpp  strategy.cpp  types.cpp
frontend/: package-lock.json  package.json
frontend/src/stores/: backtestStore.ts  dataStore.ts  index.ts  strategyStore.ts  uiStore.ts
frontend/src/types/: index.ts
include/: data_handler.h  indicator.h  strategy.h  thread_pool.h  types.h
src/: data_handler.cpp  database.cpp  execution_handler.cpp  indicator.cpp  thread_pool.cpp
test/: test_backtest.cpp  test_execution.cpp  test_execution_direct.cpp  test_indicator.cpp  test_strategy.cpp
ui-preview/: README.md  index.html
ui-preview/css/: components.css  design-system.css  layout.css  pages.css  responsive.css
ui-preview/js/: app.js
